# profil

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  TODO.md  build.sh  index.html  manifest.json  sw.js
.github/workflows/: deploy.yml
src/: i18n.rs  main.rs
src/ui/: mod.rs  pdf.rs  state.rs  view.rs
src/ui/i18n/: english.rs  finnish.rs  french.rs  german.rs  greek.rs  hungarian.rs  italian.rs  mod.rs  spanish.rs
src/ui/tabs/: display.rs  filter.rs  mod.rs  profile.rs
