[package]
name = "profil"
version = "0.1.0"
edition = "2024"

[features]
default = ["web"]
web = ["dioxus/web"]

[dependencies]
dioxus = "0.7.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3", features = ["Storage", "Window"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"
